# solar-activity-pipeline

./: .gitattributes  .gitignore  DEPLOY_HPC.md  README.md  USAGE.md  generate_run.sh  pyproject.toml
.github/workflows/: daily_pipeline.yml  tests.yml
src/: config.py  pipeline.py  run_registry.py
src/dashboard/: app.py
src/ingestion/: aavso.py  base.py  lasp.py  mgii.py  noaa.py  silso.py  spaceweather_ca.py
src/processing/: anomaly.py  transformer.py  validator.py
src/storage/: database.py  models.py
tests/: test_ingestion.py  test_processing.py
