[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "solar-activity-pipeline"
version = "0.1.0"
description = "Automated ETL pipeline for solar activity indices used in helioseismology research"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "beautifulsoup4>=4.12.0",
    "tenacity>=8.2.0",
    "structlog>=24.1.0",
    "pdfplumber>=0.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "respx>=0.21.0",
    "ruff>=0.3.0",
]